MAGNOLIA-2345 : * headerLocation must be configured per project
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@17802 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,9 @@ for Java Content Repositories (JCR).
             <version>1.4</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <headerLocation>magnolia-build-tools/license-header-dual.regex</headerLocation>
+        </configuration>
       </plugin>
     </plugins>
     
