--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@ for Java Content Repositories (JCR).
           <artifactId>maven-assembly-plugin</artifactId>
           <configuration>
             <descriptors>
-              <descriptor>info.magnolia:magnolia-bundle-assembly:1.1</descriptor>
+              <descriptor>info.magnolia:magnolia-bundle-assembly:1.1.1-SNAPSHOT</descriptor>
             </descriptors>
           </configuration>
         </plugin>
@@ -270,9 +270,16 @@ for Java Content Repositories (JCR).
       </plugin>
       <plugin>
         <artifactId>maven-remote-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>process</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
           <resourceBundles>
-            <resourceBundle>info.magnolia:magnolia-build-tools-dual-licensed:1.4</resourceBundle>
+            <resourceBundle>info.magnolia:magnolia-build-tools-dual-licensed:1.4.1-SNAPSHOT</resourceBundle>
           </resourceBundles>
         </configuration>
       </plugin>
@@ -282,7 +289,7 @@ for Java Content Repositories (JCR).
           <dependency>
             <groupId>info.magnolia</groupId>
             <artifactId>magnolia-build-tools-dual-licensed</artifactId>
-            <version>1.4</version>
+            <version>1.4.1-SNAPSHOT</version>
           </dependency>
         </dependencies>
         <configuration>
