MAGNOLIA-2345 : simplified reusable assembly by following advice from http://jira.codehaus.org/browse/MASSEMBLY-73
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@17826 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -173,10 +173,17 @@ for Java Content Repositories (JCR).
       <plugins>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
+          <dependencies>
+            <dependency>
+              <groupId>info.magnolia</groupId>
+              <artifactId>magnolia-bundle-assembly</artifactId>
+              <version>1.1.1-SNAPSHOT</version>
+            </dependency>
+          </dependencies>
           <configuration>
-            <descriptors>
-              <descriptor>info.magnolia:magnolia-bundle-assembly:1.1.1-SNAPSHOT</descriptor>
-            </descriptors>
+            <descriptorRefs>
+              <descriptorRef>module-assembly-descriptor</descriptorRef>
+            </descriptorRefs>
           </configuration>
         </plugin>
       </plugins>
