will bundle with dms 1.2.6
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@17951 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -18,17 +18,17 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-workflow</artifactId>
-          <version>3.6.1</version>
+          <version>3.6.2-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-dms</artifactId>
-          <version>1.2.5</version>
+          <version>1.2.6-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-samples</artifactId>
-          <version>3.6.1</version>
+          <version>3.6.2-SNAPSHOT</version>
         </dependency>
       </dependencies>
     </profile>
