--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-dms</artifactId>
-          <version>1.2.6-SNAPSHOT</version>
+          <version>1.2.6</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
@@ -158,7 +158,7 @@
       </plugin>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
+        <artifactId>jetty-maven-plugin</artifactId>
         <configuration>
           <scanIntervalSeconds>5</scanIntervalSeconds>
         </configuration>
