--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-workflow</artifactId>
-          <version>3.6.2-SNAPSHOT</version>
+          <version>3.7-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
@@ -28,8 +28,30 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-samples</artifactId>
-          <version>3.6.2-SNAPSHOT</version>
+          <version>3.7-SNAPSHOT</version>
         </dependency>
+        <!--
+         <dependency>
+            <groupId>info.magnolia</groupId>
+            <artifactId>magnolia-module-imagefiltering</artifactId>
+            <version>1.1-SNAPSHOT</version>
+          </dependency>
+         <dependency>
+            <groupId>info.magnolia</groupId>
+            <artifactId>magnolia-module-forum</artifactId>
+            <version>1.0-SNAPSHOT</version>
+          </dependency>
+         <dependency>
+           <groupId>info.magnolia</groupId>
+           <artifactId>magnolia-license</artifactId>
+           <version>1.1</version>
+         </dependency>
+         <dependency>
+           <groupId>info.magnolia</groupId>
+           <artifactId>magnolia-module-documentation</artifactId>
+           <version>1.0-SNAPSHOT</version>
+         </dependency>
+         -->
       </dependencies>
     </profile>
   </profiles>
