--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -17,6 +17,7 @@ magnolia.repositories.home=repositories
 magnolia.repositories.jackrabbit.config=WEB-INF/config/repo-conf/jackrabbit-bundle-derby-search.xml
 
 log4j.config=WEB-INF/config/default/log4j.xml
+magnolia.logs.dir=logs
 
 # The directories in which the bootstrap files are searched
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
