MAGNOLIA-764 use ${magnolia.app.rootdir} in magnolia properties and ${magnolia.logs.dir} in log4j
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@19304 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -9,15 +9,15 @@
 # another \, i.e C:\\magnolia\\data\\repositories
 # or c:/magnolia/data/repositories
 #--------------------------------------------
-magnolia.cache.startdir=cache
-magnolia.upload.tmpdir=tmp
-magnolia.exchange.history=history
+magnolia.cache.startdir=${magnolia.app.rootdir}/cache
+magnolia.upload.tmpdir=${magnolia.app.rootdir}/tmp
+magnolia.exchange.history=${magnolia.app.rootdir}/history
 magnolia.repositories.config=WEB-INF/config/default/repositories.xml
-magnolia.repositories.home=repositories
+magnolia.repositories.home=${magnolia.app.rootdir}/repositories
 magnolia.repositories.jackrabbit.config=WEB-INF/config/repo-conf/jackrabbit-bundle-derby-search.xml
 
 log4j.config=WEB-INF/config/default/log4j.xml
-magnolia.logs.dir=logs
+magnolia.logs.dir=${magnolia.app.rootdir}/logs
 
 # The directories in which the bootstrap files are searched
 magnolia.bootstrap.dir=WEB-INF/bootstrap/author WEB-INF/bootstrap/common
