--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
@@ -31,4 +31,10 @@
     </param-value>
   </context-param>
   -->
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <page-encoding>UTF-8</page-encoding>
+    </jsp-property-group>
+  </jsp-config>
 </web-app>
