--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>4.0-m1</version>
+  <version>4.0-SNAPSHOT</version>
   <description>
 Magnolia is an open-source enterprise class
 Content Management System developed by
@@ -125,9 +125,9 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/tags/magnolia-4.0-m1</connection>
-    <developerConnection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/tags/magnolia-4.0-m1</developerConnection>
-    <url>http://svn.magnolia.info/view/community/magnolia/tags/magnolia-4.0-m1</url>
+    <connection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/trunk</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/community/magnolia/trunk</developerConnection>
+    <url>http://svn.magnolia.info/view/community/magnolia/trunk</url>
   </scm>
   <profiles>
     <profile>
