MAGNOLIA-2366: - renamed templateDef and paragraphDef to def - model.definition and model.def - Renderable renamed to RenderableDefinition
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@20526 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -17,7 +17,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-admininterface</artifactId>
+      <artifactId>magnolia-gui</artifactId>
       <version>4.0-SNAPSHOT</version>
     </dependency>
     <dependency>
