--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-dms</artifactId>
-          <version>1.2.6</version>
+          <version>1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
