--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -50,3 +50,5 @@ info.magnolia.module.admininterface.SaveHandler=info.magnolia.module.admininterf
 info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
 info.magnolia.voting.Voter = info.magnolia.voting.voters.VoterSet
 info.magnolia.logging.AuditLoggingManager=/server/auditLogging
+
+info.magnolia.freemarker.FreemarkerTemplateLoaderManager=/server/freemarker
